--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 	<title>Calculator Lab</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>	
+	<script type="text/javascript" src="script.js"></script>	
 </head>
 <body>
 <div id="calculator">
 	<div id="screen-container">
-   <div id="screen">
+   <div id="screen">html
    </div>
 	</div>
 	<div id="button-container">
